Add an alias library symspg-omp that is always built with OpenMP
Cmake object magic!

Signed-off-by: Cristian Le <cristian.le@mpsd.mpg.de>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,11 +27,7 @@ endif ()
 if (NOT CMAKE_BUILD_TYPE)
 	set(CMAKE_BUILD_TYPE Release)
 endif ()
-if (SPGLIB_SHARED_LIBS)
-	set(BUILD_SHARED_LIBS ON)
-else()
-	set(BUILD_SHARED_LIBS OFF)
-endif()
+set(BUILD_SHARED_LIBS ${SPGLIB_SHARED_LIBS})
 if (NOT CMAKE_Fortran_MODULE_DIRECTORY)
 	set(CMAKE_Fortran_MODULE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/fortran_mods)
 endif ()
