--- a/test/fortran/CMakeLists.txt
+++ b/test/fortran/CMakeLists.txt
@@ -15,6 +15,10 @@ create_test_sourcelist(FortranTests_Files
 
 add_executable(FortranTests ${FortranTests_Files})
 target_link_libraries(FortranTests PRIVATE test_utils spglib_f08)
+if (CMAKE_Fortran_COMPILER_ID MATCHES "Intel.*")
+	target_link_options(FortranTests PRIVATE
+			"$<$<COMPILE_LANGUAGE:Fortran>:-nofor-main>")
+endif ()
 
 # Remove the driver executable from the list for add_test
 set(TestsToRun ${FortranTests_Files})
