--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -20,6 +20,7 @@ repos:
           - '-B_build-pre-commit'
           - '-DSPGLIB_WITH_Fortran=ON'
           - '-DSPGLIB_WITH_TESTS=ON'
+        stages: [manual]
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.3.0
     hooks:
