Move ctest to top build directory
Signed-off-by: Cristian Le <cristian.le@mpsd.mpg.de>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,6 +70,7 @@ if (SPGLIB_WITH_Python)
 	add_subdirectory(python)
 endif ()
 if (SPGLIB_WITH_TESTS)
+	enable_testing()
 	add_subdirectory(test)
 endif ()
 
