Add runners for all toolchains
Signed-off-by: Cristian Le <cristian.le@mpsd.mpg.de>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -62,3 +62,7 @@ repos:
         additional_dependencies:
           - mdformat-gfm
           - mdformat-tables
+  - repo: https://github.com/python-jsonschema/check-jsonschema
+    rev: 0.21.0
+    hooks:
+      - id: check-github-workflows
