--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,9 @@ option(SPGLIB_WITH_Fortran "Spglib: Build Fortran interface" OFF)
 option(SPGLIB_WITH_Python "Spglib: Build Python interface" OFF)
 option(SPGLIB_USE_OMP "Spglib: Build with OpenMP support" OFF)
 set(SPGLIB_USE_SANITIZER "" CACHE STRING "Spglib: Sanitizer used in compilation")
+mark_as_advanced(SPGLIB_USE_SANITIZER)
+option(SPGLIB_TEST_COVERAGE "Spglib: Test with coverage" OFF)
+mark_as_advanced(SPGLIB_TEST_COVERAGE)
 
 # Sanity check if project is imported
 if (CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
@@ -78,6 +81,11 @@ if (SPGLIB_WITH_Python)
 endif ()
 if (SPGLIB_WITH_TESTS)
 	enable_testing()
+	if (SPGLIB_TEST_COVERAGE)
+		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --coverage")
+		set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} --coverage")
+		set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} --coverage")
+	endif ()
 	add_subdirectory(test)
 endif ()
 
