--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,7 +2,7 @@
 # https://github.com/pre-commit/pre-commit/issues/1375
 default_language_version:
   python: python3
-exclude: src/msg_database.c
+exclude: src\/msg_database.c
 
 fail_fast: false
 repos:
@@ -21,41 +21,40 @@ repos:
           - '-B_build-pre-commit'
           - '-DSPGLIB_WITH_Fortran=ON'
           - '-DSPGLIB_WITH_TESTS=ON'
-        stages: [manual]
+        stages: [ manual ]
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.3.0
     hooks:
-    - id: trailing-whitespace
-    - id: end-of-file-fixer
-    - id: check-yaml
-    - id: check-added-large-files
+      - id: trailing-whitespace
+      - id: end-of-file-fixer
+      - id: check-yaml
+      - id: check-added-large-files
   - repo: https://github.com/pycqa/flake8
     rev: 5.0.4
     hooks:
-    - id: flake8
-      files: python/
-      args:
-      - "--max-line-length=88"
-      - "--ignore=E203,W503"
+      - id: flake8
+        files: python\/.*
+        args:
+          - "--max-line-length=88"
+          - "--ignore=E203,W503"
   - repo: https://github.com/psf/black
     rev: 22.6.0
     hooks:
-    - id: black
-      files: python/
-      args:
-      - --line-length=88
+      - id: black
+        files: python\/.*
+        args: [ "--line-length=88" ]
   - repo: https://github.com/pycqa/pydocstyle
     rev: 6.1.1
     hooks:
-    - id: pydocstyle
-      files: python/spglib
-      additional_dependencies: ["toml"]
+      - id: pydocstyle
+        files: python/spglib
+        additional_dependencies: [ "toml" ]
   - repo: https://github.com/pycqa/isort
     rev: 5.12.0
     hooks:
       - id: isort
-        files: python/
-        args: ["--profile", "black"]
+        files: python\/.*
+        args: [ "--profile", "black" ]
   - repo: https://github.com/executablebooks/mdformat
     rev: 0.7.16
     hooks:
@@ -63,6 +62,16 @@ repos:
         additional_dependencies:
           - mdformat-gfm
           - mdformat-tables
+        exclude: doc\/(?!README\.md).*
+    # TODO: Temporarily separate docs formatiing
+    # https://github.com/executablebooks/mdformat/issues/234
+  - repo: https://github.com/executablebooks/mdformat
+    rev: 0.7.16
+    hooks:
+      - id: mdformat
+        additional_dependencies:
+          - mdformat-myst
+        files: doc\/(?!README).*\.md$
   - repo: https://github.com/python-jsonschema/check-jsonschema
     rev: 0.21.0
     hooks:
