Taking care of .F90 file names

--- a/example/fortran_api/CMakeLists.txt
+++ b/example/fortran_api/CMakeLists.txt
@@ -13,7 +13,7 @@ if(NOT Spglib_FOUND)
 endif()
 
 
-add_executable(example_f example_f08.f90)
+add_executable(example_f example_f08.F90)
 if(Spglib_FOUND)
 	# Linking using native cmake
 	target_link_libraries(example_c PUBLIC
