--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,7 +39,9 @@ docs = [
     "sphinxcontrib-bibtex==2.4.2",
     "sphinx-book-theme==0.3.3",
     "myst-parser==0.18.0",
-    "linkify-it-py==2.0.0"
+    "linkify-it-py==2.0.0",
+    "jinja2",
+    "pyyaml",
 ]
 test-cov = [
     "spglib[test]",
