--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -11,6 +11,7 @@ build:
     python: "3.11"
   jobs:
     pre_build:
-      - echo "Placeholder for doxygen builds via cmake"
+      - ./scripts/Readthedocs_pre_build.sh
+
 sphinx:
   configuration: doc/conf.py
