--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,20 +29,37 @@ repository = "https://github.com/spglib/spglib"
 changelog = "https://spglib.readthedocs.io/en/latest/releases.html"
 
 [project.optional-dependencies]
-testing = [
+test = [
     "codecov",
     "pytest",
-    "pytest-cov",
-    "pytest-benchmark",
     "pyyaml",
 ]
-doc = [
+docs = [
     "Sphinx==4.5.0",
     "sphinx-autobuild==2021.3.14",
     "sphinxcontrib-bibtex==2.4.2",
     "sphinx-book-theme==0.3.3",
     "myst-parser==0.18.0",
     "linkify-it-py==2.0.0"
+]
+test-cov = [
+    "spglib[test]",
+    "pytest-cov",
+]
+test-benchmark = [
+    "spglib[test]",
+    "pytest-benchmark",
+]
+dev = [
+    "spglib[test]",
+    "pre-commit",
+]
+# Alternative names for compatibility
+doc = [
+    "spglib[docs]",
+]
+testing = [
+    "spglib[test]",
 ]
 
 [tool.scikit-build]
@@ -56,7 +73,7 @@ cmake.args = [
 
 [tool.cibuildwheel]
 skip = ["pp*", "*-win32", "*-manylinux_i686", "*-musllinux*", "*-macosx_arm64"]
-test-extras = "testing"
+test-extras = "test"
 test-command = "pytest {package}/python/test --benchmark-skip"
 # Do not run test on emulated environments
 test-skip = "*-*linux_{aarch64,ppc64le,s390x} *-macosx_arm64 *-macosx_universal2:arm64"
@@ -72,7 +89,7 @@ repair-wheel-command = ""
 repair-wheel-command = ""
 
 [tool.pytest.ini_options]
-addopts = "--benchmark-skip"
+addopts = "-m 'not benchmark'"
 testpaths = ["python/test"]
 
 [tool.coverage.run]
