chore: use Python for package copy
Signed-off-by: Henry Schreiner <henryschreineriii@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,7 +63,7 @@ testing = [
 ]
 
 [tool.scikit-build]
-#wheel.packages = "python/spglib"
+wheel.packages = ["python/spglib"]
 wheel.install-dir = "spglib"
 cmake.args = [
     "-DSPGLIB_WITH_Python=ON",
