--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,6 @@ MANIFEST
 *.lo
 *.o
 
-# Python wrapper
-python/src
-python/_skbuild
-
 # Packages
 *.egg
 *.egg-info
@@ -84,3 +80,9 @@ docs_build/
 CMakeUserPresets.json
 
 doc/api/python-api/
+
+/python/spglib/_version.py
+venv
+env
+.venv
+.env
